# take-home-assignment

./: .env  .gitignore  Dockerfile  README.md  README_Hakan.md  build.gradle.kts  docker-compose.yaml  docker-compose.yml  mvnw  pom.xml  settings.gradle.kts
client/: .eslintcache  .gitignore  package-lock.json  package.json  protoc.sh
client/src/: App.scss  App.tsx  Navigation.tsx
client/src/components/: Alert.scss  Alert.tsx  Buttons.scss  CarList.tsx  CarListItem.tsx  Constants.scss  FormInputField.tsx  FormListLayout.scss  Input.scss  Surface.scss  Text.scss  TopNavigation.scss
client/src/components/car/: AnnualCostCarList.tsx  CarList.scss  CarList.tsx  CarListItem.scss  CarListItem.tsx
client/src/hooks/: useSearchCarClient.ts
client/src/providers/: AlertProvider.tsx
client/src/screens/: AddCar.tsx  AnnualCosts.tsx  CarCollection.tsx
client/src/services/: CarCollectionService.ts
client/src/utils/: ArrayUtils.ts  NumberUtils.ts
domain/: pom.xml
domain/src/main/java/com/rhdhv/domain/: AddCarToStoreUseCaseHandler.java  DeleteAllCarUseCaseHandler.java  FullTextSearchCarUseCaseHandler.java  RecommendCarUseCaseHandler.java  RetrieveCarsByFilterUseCaseHandler.java
domain/src/test/java/com/rhdhv/domain/: AddCarToStoreTest.java  FullTextSearchCarTest.java  (+1 more)
envoy/: Dockerfile  reverse-proxy.yaml
infra/: pom.xml
infra/src/main/resources/: application-env.properties  application.properties
protos/src/main/proto/com/carcatalogue/proto/: BUILD.bazel  dog.proto  pig.proto  searchcar.proto  sheep.proto
server/: build.gradle.kts
(+52 files in other folders)
