load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library")

licenses(["notice"])

package(default_visibility = ["//examples:__subpackages__"])

proto_library(
    name = "carcatalogue_proto",
    srcs = [
        "searchcar.proto",
    ],
)

java_proto_library(
    name = "carcatalogue_java_proto",
    deps = [":carcatalogue_proto"],
)

java_lite_proto_library(
    name = "carcatalogue_java_proto_lite",
    deps = [":carcatalogue_proto"],
)

kt_jvm_grpc_library(
    name = "carcatalogue_kt_grpc",
    srcs = [":carcatalogue_proto"],
    deps = [":carcatalogue_java_proto"],
)

kt_jvm_grpc_library(
    name = "carcatalogue_kt_grpc_lite",
    srcs = [":carcatalogue_proto"],
    flavor = "lite",
    deps = [":carcatalogue_java_proto_lite"],
)
